latest ref_ts code merged from module. datepicker not working

--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -663,7 +663,7 @@
             }
         var summary = calcSummaryStats(graph_data);
         setSummaryStatistics(summary);
-        getDatasetsAfterFilters(glob_graph_data);
+        //getDatasetsAfterFilters(glob_graph_data);
         }
 
         function calcSummaryStats(data){
