make genericresource as default resource to create

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -43,8 +43,9 @@
     <label for="" class="col-sm-2 control-label">Resource Type</label>
     <div class="col-sm-10">
         <select class="form-control" name="resource-type" id="resource-type">
+            <option value="GenericResource">Generic Resource</option>
             <option value="InstResource">RHESSys Instance Resource</option>
-            <option value="GenericResource">Generic Resource</option></select>
+        </select>
     </div>
   </div>
 
