made visualization code it's own file. axis labels better

--- a/ref_ts/templates/pages/reftimeseries.html
+++ b/ref_ts/templates/pages/reftimeseries.html
@@ -496,6 +496,7 @@
 
     <script src=" {% static "ref_ts/d3/d3.min.js" %}"></script>
     <script src=" {% static "ref_ts/datepicker/js/bootstrap-datepicker.js" %}"></script>
+    <script src=" {% static "ref_ts/visualization/visualization.js" %}"></script>
     <script type="text/javascript">
 
     $(function() {
@@ -525,242 +526,7 @@
             return str.indexOf(suffix, str.length - suffix.length) !== -1;
         }
 
-        function graphVals(graph_data, units, varName) {
 
-
-            var minDate = new Date(graph_data[0].x);
-            var maxDate = new Date(graph_data[graph_data.length - 1].x);
-
-            var WIDTH = 800,
-                HEIGHT = 432,
-                HEIGHT2 = 50,
-                MARGINS = {
-                  top: 20,
-                  right: 40,
-                  bottom: 20,
-                  left: 40
-                },
-                xRange = d3.time.scale().range([MARGINS.left, WIDTH-MARGINS.left-MARGINS.right]).domain([minDate, maxDate ]),
-                xRange2 = d3.time.scale().range([MARGINS.left, WIDTH-MARGINS.left-MARGINS.right]).domain([minDate, maxDate ]),
-                yRange = d3.scale.linear().range([HEIGHT - MARGINS.top, MARGINS.bottom]).domain([d3.min(graph_data, function(d) {
-                  return d.y;
-                }), d3.max(graph_data, function(d) {
-                  return d.y;
-                })]),
-                yRange2 = d3.scale.linear().range([HEIGHT2 - MARGINS.top, MARGINS.bottom]).domain([d3.min(graph_data, function(d) {
-                  return d.y;
-                }), d3.max(graph_data, function(d) {
-                  return d.y;
-                })]),
-                xAxis = d3.svg.axis()
-                  .scale(xRange)
-                  .tickSize(5)
-                  .tickSubdivide(true),
-                yAxis = d3.svg.axis()
-                  .scale(yRange)
-                  .tickSize(5)
-                  .orient('left')
-                  .tickSubdivide(true);
-
-            $("#graph-container").html("");
-
-            var svg = d3.select("#graph-container").append("svg")
-                .attr("width", 833)
-                .attr("height", 500);
-
-            svg.append("clipPath")
-                .attr("id", "clip")
-              .append("rect")
-                .attr("width",  WIDTH-2*MARGINS.left-MARGINS.right)
-                .attr("x",MARGINS.left)
-                .attr("height", HEIGHT);
-
-            var brush = d3.svg.brush()
-                .x(xRange2)
-                .on("brush", brushed);
-
-            var focus = svg.append("g")
-                .attr("class", "focus")
-                .attr("width", 762)
-                .attr("height", 300);
-             
-            focus.append('g')  // Add the x axis
-                .attr('class', 'x axis')
-                .attr('transform', 'translate(0,' + (HEIGHT - MARGINS.bottom) + ')')
-                .call(xAxis);
-
-            svg.append('g')  // Add the y axis
-                .attr('class', 'y axis')
-                .attr('transform', 'translate(' + (MARGINS.left) + ',0)') // not totall sure this is necessary
-                .call(yAxis);
-
-            svg.append("text")  // y axis label
-                .attr("transform", "rotate(-90)")
-                .attr("y", 6)
-                .attr("x",0 - (HEIGHT / 2))
-                .attr("dy", ".75em")
-                .attr("text-anchor", "middle")
-                .text(varName + " ("+units+")");
-
-
-            var lineFunc = d3.svg.line()
-              .x(function(d) {
-                return xRange(d.x);
-              })
-              .y(function(d) {
-                return yRange(d.y);
-              })
-              .interpolate('linear');
-
-            var lineFunc1 = d3.svg.line()
-              .x(function(d) {
-                return xRange(d.x);
-              })
-              .y(function(d) {
-                return yRange2(d.y);
-              })
-              .interpolate('linear');
-
-            focus.append('path')
-                .attr('d', lineFunc(graph_data))
-                .attr('stroke', 'rgb(31,119,180)')
-                .attr('class','line')
-                .attr('stroke-width', 1.5)
-                .attr("clip-path", "url(#clip)")
-                .attr('fill', 'none');
-
-
-
-            var context = svg.append("g")
-                .attr("class", "context")
-                .attr("transform", "translate(0," + HEIGHT + ")");
-
-
-
-            context.append('g')
-              .attr('class', 'x axis')
-              .attr('transform', 'translate(0,' + (HEIGHT2 - MARGINS.bottom) + ')')
-              .call(xAxis);
-
-
-            context.append('path')
-              .attr('d', lineFunc1(graph_data))
-              .attr('stroke', 'rgb(31,119,180)')
-              .attr('stroke-width', 1.5)
-              .attr('class','line')
-              .attr('fill', 'none');
-
-            context.append("g")
-              .attr("class", "x brush")
-              .call(brush)
-            .selectAll("rect")
-              .attr("y", 0)
-              .attr("height", 35);
-        function brushed() {
-          xRange.domain(brush.empty() ? xRange2.domain() : brush.extent());
-          focus.select(".line").attr("d", lineFunc(graph_data));
-          focus.select(".x.axis").call(xAxis);
-            }
-        var summary = calcSummaryStats(graph_data);
-        setSummaryStatistics(summary);
-        //getDatasetsAfterFilters(glob_graph_data);
-        }
-
-        function calcSummaryStats(data){
-            var summary = {};
-            summary = {
-                maximum:-Infinity,
-                minimum:Infinity,
-                arithmeticMean: 0,
-                geometricSum:0,
-                geometricMean:0,
-                deviationSum:0,
-                standardDeviation:0,
-                observations:0,
-                coefficientOfVariation:0,
-                quantile10:0,
-                quantile25:0,
-                median:0,
-                quantile75:0,
-                quantile90:0
-            };
-
-            if (data.length == 0){
-                summary.maximum = "NaN";
-                summary.minimum = "NaN";
-                summary.arithmeticMean = "NaN";
-                summary.geometricSum = "NaN";
-                summary.geometricMean = "NaN";
-                summary.deviationSum = "NaN";
-                summary.standardDeviation = "NaN";
-                summary.observations = 0;
-                summary.quantile10 = "NaN";
-                summary.quantile25 = "NaN";
-                summary.median = "NaN";
-                summary.quantile75 = "NaN";
-                summary.quantile90 = "NaN";
-            }
-           else {
-                var y_vals = [];
-                for (var j = 0; j < data.length; j++) {
-                    y_vals.push(data[j].y)
-                }
-                // Quantiles
-                summary.quantile10 = d3.quantile(y_vals, .1).toFixed(2);
-                summary.quantile25 = d3.quantile(y_vals, .25).toFixed(2);
-                summary.median = d3.quantile(y_vals, .5).toFixed(2);
-                summary.quantile75 = d3.quantile(y_vals, .75).toFixed(2);
-                summary.quantile90 = d3.quantile(y_vals, .9).toFixed(2);
-                // Number of observations
-                summary.observations = data.length;
-                // Maximum and Minimum
-                summary.maximum = d3.max(data, function (d) {
-                    return d.y;
-                });  //good
-                summary.minimum = d3.min(data, function (d) {
-                    return d.y;
-                });  //good
-
-                // Arithmetic Mean
-                summary.arithmeticMean = d3.mean(data, function (d) {
-                    return d.y;
-                }).toFixed(2);
-
-                // Standard Deviation
-                summary.deviationSum = d3.sum(data, function (d) {
-                    return Math.pow(parseFloat(d.y) - summary.arithmeticMean, 2)
-                }).toFixed(2);
-                summary.standardDeviation = (Math.pow(summary.deviationSum / data.length, (1 / 2))).toFixed(2);
-
-                // Geometric Mean
-                summary.geometricSum = d3.sum(data, function (d) {
-                    if (d.y != 0) return Math.log(Math.abs(d.y));
-                }).toFixed(2);
-                summary.geometricMean = (Math.pow(2, (summary.geometricSum / data.length))).toFixed(2);
-
-                // Coefficient of Variation
-                var variation = summary.standardDeviation / summary.arithmeticMean;
-                if (variation == Infinity || variation == -Infinity) {
-                    variation = null;
-                }
-                summary.coefficientOfVariation = ((summary.standardDeviation / summary.arithmeticMean) * 100).toFixed(2) + "%";
-
-                // Add commas
-                summary.arithmeticMean = numberWithCommas(summary.arithmeticMean);
-                summary.geometricMean = numberWithCommas(summary.geometricMean);
-                summary.observations = numberWithCommas(summary.observations);
-                summary.quantile10 = numberWithCommas(summary.quantile10);
-                summary.quantile25 = numberWithCommas(summary.quantile25);
-                summary.median = numberWithCommas(summary.median);
-                summary.quantile75 = numberWithCommas(summary.quantile75);
-                summary.quantile90 = numberWithCommas(summary.quantile90);
-                return summary;
-            }
-    }
-
-        function numberWithCommas(x) {
-        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-            }
 
         function setSummaryStatistics(summary){
         $("#statisticsTable tbody").empty();
@@ -850,82 +616,7 @@
             });
         }
 
-        function getDatasetsAfterFilters(dataset){
-            var minDate = new Date(dataset[0].x);
-            var maxDate = new Date(dataset[dataset.length - 1].x);
 
-            // Update minimum and maximum dates on the date pickers
-             var dateFirst = $('#dpd1').datepicker({
-                onRender: function (date){
-                    return (date.valueOf() > maxDate.valueOf() || date.valueOf() < minDate.valueOf()) ? 'disabled' : '';    // disable dates with no records
-                }
-            }).on('click', function(){
-                dateLast.hide();
-            }).on('changeDate',function (ev) {
-                dateFirst.hide();
-            }).data('datepicker');
-
-            var dateLast = $('#dpd2').datepicker({
-                onRender: function (date) {
-                    return (date.valueOf() > maxDate.valueOf() || date.valueOf() < minDate.valueOf()) ? 'disabled' : '';    // disable dates with no records
-                }
-            }).on('click', function(){
-                dateFirst.hide();
-            }).on('changeDate',function (ev) {
-                dateLast.hide();
-            }).data('datepicker');
-
-            var nowTemp = new Date();
-            var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
-
-            // If no dates are set, display the last month. Display the whole set if it contains less than 500 data points.
-            if (dateFirst.date.valueOf() == now.valueOf() && dateLast.date.valueOf() == now.valueOf()) {
-                // Mark the button of last month interval
-                $("#dateIntervals button").removeClass("active");
-                $("#btnLastMonth").addClass("active");
-
-                dateFirst.date = maxDate.setMonth(maxDate.getMonth() - 1);
-                dateFirst.setValue(maxDate);
-
-                dateLast.date = maxDate.setMonth(maxDate.getMonth() + 1);
-                dateLast.setValue(maxDate);
-            }
-
-            // Update click events for the date interval buttons
-            $("#btnLastWeek").click(function() {
-                $("#dateIntervals button").removeClass("active");
-                $(this).addClass("active");
-
-                dateFirst.date = maxDate.setDate(maxDate.getDate() - 7);
-                dateFirst.setValue(maxDate);
-
-                dateLast.date = maxDate.setDate(maxDate.getDate() + 7);
-                dateLast.setValue(maxDate);
-            });
-            $("#btnLastMonth").click(function() {
-                $("#dateIntervals button").removeClass("active");
-                $(this).addClass("active");
-
-                dateFirst.date = maxDate.setMonth(maxDate.getMonth() - 1);
-                dateFirst.setValue(maxDate);
-
-                dateLast.date = maxDate.setMonth(maxDate.getMonth() + 1);
-                dateLast.setValue(maxDate);
-            });
-            $("#btnAll").click(function() {
-                $("#dateIntervals button").removeClass("active");
-                $(this).addClass("active");
-
-                dateFirst.date = minDate;
-                dateFirst.setValue(minDate);
-
-                dateLast.date = maxDate;
-                dateLast.setValue(maxDate);
-            });
-
-
-            return dataset;
-        }
 
         $(document).ready(function(){
             generateFiles();
