hover working on unzoomed data; not on zoomed

--- a/ref_ts/static/ref_ts/visualization/css/style.css
+++ b/ref_ts/static/ref_ts/visualization/css/style.css
@@ -20,6 +20,11 @@
           pointer-events: all;
         }
 
+        .over circle {
+          fill: none;
+          stroke: steelblue;
+        }
+
         .bar
         {
             fill: FireBrick;
