fixed bugs https://github.com/hydroshare/hydroshare2/issues/86 and https://github.com/hydroshare/hydroshare2/issues/53

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -27,7 +27,7 @@
     <table class="table" id="file-list">
     <tbody id="files">
         <tr>
-            <td><input class="form-control" type="file" name="files" id="" multiple/></td>
+            <td><input type="file" name="files" id="" multiple/></td>
         </tr>
     </tbody>
     </table>
@@ -38,7 +38,7 @@
         will show up when your Resource is displayed. You can edit this information later.
     </p>
 
-<h3>Add your metadata here:</h3>
+  <h3>Add your metadata here:</h3>
   <div class="form-group">
     <label for="" class="col-sm-2 control-label">Resource Type</label>
     <div class="col-sm-10">
