--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -103,9 +103,9 @@
             <div class="btn-toolbar">
                 <a class="btn btn-link" href="?start=0"><i class="fa fa-fast-backward"></i></a>
                 <a class="btn btn-link" href="?start={{ first|add:"-20" }}"><i class="fa fa-backward"></i></a>
-                Results {{ first }}-{{ last }} of {{ ct }}
+                Results {{ first|add:"1" }}-{{ last }} of {{ ct }}
                 <a class="btn btn-link" href="?start={{ first|add:"20" }}"><i class="fa fa-forward"></i></a>
-                <a class="btn btn-link" href="?start={{ first|add:"100" }}"><i class="fa fa-fast-forward"></i></a>
+                <a class="btn btn-link" href="?start={{ last|add:"-20" }}"><i class="fa fa-fast-forward"></i></a>
 
             </div>
         </div>
