--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -69,10 +69,12 @@
             <h4>Other Metadata</h4>
             <table class="table table-condensed">
             {% for term in dublin_core %}
-                <tr>
-                    <th>{{ term|dcterm }}</th>
-                    <td>{{ term.content }}</td>
-                </tr>
+                {% ifnotequal term|dcterm 'Title' %}
+                    <tr>
+                        <th>{{ term|dcterm }}</th>
+                        <td>{{ term.content }}</td>
+                    </tr>
+                {% endifnotequal %}
             {% endfor %}
             </table>
             {% if page.perms.change %}
