--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -73,9 +73,28 @@
 
         </div>
         <div class="col-lg-10" id="items">
-            <div style="padding-bottom: 0.5em">
-            <a class="btn btn-success" href="/create-resource/"><i class="fa fa-plus"></i> Create new</a>
-
+            <div style="padding-bottom: 0.5em" class="btn-group">
+                <a class="btn dropdown-toggle btn-success" data-toggle="dropdown" href="#">
+                    Create New
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu" style="height: auto; max-height: 200px; overflow-x: hidden;">
+                    <li><a href="/res-type-reference"><i>Resource Reference</i></a></li>
+                    <li class="divider"></li>
+                    <li><a href="/create-resource">Generic Resource</a></li>
+                    <li><a href="/create-ref-time-series">Referenced Time Series</a></li>
+                    <li><a href="/create-ref-time-series">RHYSSys Instance Resource</a></li>
+                    <li><a href="/create-resource">NetCDF Resource</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 1</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 2</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 3</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 4</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 5</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 6</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 7</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 8</a></li>
+                    <li><a href="/create-ref-time-series">Some other type 9</a></li>
+                </ul>
             </div>
 
             <table class="table table-striped table-hover" id="item-selectors">
