fixed issue #63 - not to add row automatically when pressing enter key

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -43,11 +43,11 @@
         <div class="col-md-12" id="dcterms-rows">
 
             <div class="form-group" style="padding-top: 0.3em;">
-                    <button class="btn btn-primary" id="add-row">
+                    <button class="btn btn-primary" id="add-row" type="button">
                         Add row
                     </button>
                     <button class="btn btn-primary" type="submit">Update results</button>
-                </div>
+            </div>
 
         </div>
     </div>
