further fix to make the double right arrow work for resource paging to go to the last page of resources

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -105,7 +105,7 @@
                 <a class="btn btn-link" href="?start={{ first|add:"-20" }}"><i class="fa fa-backward"></i></a>
                 Results {{ first|add:"1" }}-{{ last }} of {{ ct }}
                 <a class="btn btn-link" href="?start={{ first|add:"20" }}"><i class="fa fa-forward"></i></a>
-                <a class="btn btn-link" href="?start={{ last|add:"-20" }}"><i class="fa fa-fast-forward"></i></a>
+                <a class="btn btn-link" href="?start={{ ct|add:"-20" }}"><i class="fa fa-fast-forward"></i></a>
 
             </div>
         </div>
