--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -23,7 +23,6 @@
 
 <form class="form-horizontal" role="form" method="POST" enctype="multipart/form-data" action="/hsapi/_internal/create-resource/">
     {% csrf_token %}
-
     <table class="table" id="file-list">
     <tbody id="files">
         <tr>
@@ -31,6 +30,8 @@
         </tr>
     </tbody>
     </table>
+
+    <h2 style="color:red">{{ file_size_error }}</h2>
 
     <h2>Describe your Resource with metadata:</h2>
 
