--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -162,7 +162,7 @@
             var x_axis = new Rickshaw.Graph.Axis.Time( { graph: graph } );
             var y_axis = new Rickshaw.Graph.Axis.Y( { graph: graph } );
             graph.render();
-            var hoverDetail = new Rickshaw.Graph.HoverDetail( {graph: graph} );
+           // var hoverDetail = new Rickshaw.Graph.HoverDetail( {graph: graph} );
 
         }
         $(document).ready(function(){
