fixed the browse button misalign problem in 'Add file to resource' dialog

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -484,7 +484,7 @@
                   {% csrf_token %}
                   <div class="form-group">
                       <label for="add-citation-input">Select files:</label>
-                      <input type="file" class="form-control" name="files" id="add-file-input" multiple/>
+                      <input type="file" name="files" id="add-file-input" multiple/>
                   </div>
 
           </div>
