Fix 500 max length limitation for abstract field to make the field as a TextField object as well as making rich text input for abstract when creating resources to be consistent with abstract rich text editing

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -74,7 +74,7 @@
   <div class="form-group">
     <label for="" class="col-sm-2 control-label">Abstract</label>
     <div class="col-sm-10">
-        <textarea class="form-control" name="abstract" id="" cols="30" rows="10" placeholder="Abstract"></textarea>
+        <textarea class="mceEditor charfield" cols="40" id="" name="abstract" rows="10" placeholder="Abstract"> </textarea>
     </div>
   </div>
 
